// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`extra keys 1`] = `
[
  "a",
  "b",
]
`;

exports[`extra keys 2`] = `
{
  "a": 1,
  "b": 1,
}
`;

exports[`should add extra keys to object 1`] = `
[
  "a",
  "b",
  "c",
  "d",
]
`;

exports[`should add extra keys to object 2`] = `
{
  "a": 1,
  "b": 1,
  "c": undefined,
  "d": undefined,
}
`;

exports[`should follow sort function 1`] = `
[
  "key-1",
  "key-2",
  "key-3",
  "key-10",
]
`;

exports[`should follow sort function 2`] = `
{
  "key-1": 1,
  "key-10": 1,
  "key-2": 1,
  "key-3": 1,
}
`;

exports[`should not add extra keys to object 1`] = `
[
  "a",
  "b",
]
`;

exports[`should not add extra keys to object 2`] = `
{
  "a": 1,
  "b": 1,
}
`;

exports[`sort object 1`] = `
[
  "a",
  "b",
  "c",
  "d",
]
`;

exports[`sort object 2`] = `
{
  "a": 1,
  "b": 1,
  "c": 1,
  "d": 1,
}
`;

exports[`sort object v2 1`] = `
[
  "b",
  "c",
  "a",
  "d",
]
`;

exports[`sort object v2 2`] = `
{
  "a": 1,
  "b": 1,
  "c": 1,
  "d": 1,
}
`;

exports[`sort object v3 1`] = `
[
  "b",
  "c",
  "a",
  "d",
]
`;

exports[`sort object v3 2`] = `
{
  "a": 1,
  "b": 1,
  "c": 1,
  "d": 1,
}
`;

exports[`source will change order 1`] = `
[
  "a",
  "b",
  "c",
  "d",
  "e",
]
`;

exports[`source will change order 2`] = `
{
  "a": 1,
  "b": 3,
  "c": 2,
  "d": 4,
  "e": 5,
}
`;

exports[`source will not change order 1`] = `
[
  "a",
  "b",
  "c",
  "d",
  "e",
]
`;

exports[`source will not change order 2`] = `
{
  "a": 1,
  "b": 3,
  "c": 2,
  "d": 4,
  "e": 5,
}
`;

exports[`with desc 1`] = `
[
  "d",
  "a",
  "c",
  "b",
]
`;

exports[`with desc 2`] = `
{
  "a": 1,
  "b": 1,
  "c": 1,
  "d": 1,
}
`;

exports[`with onlyKeys 1`] = `
[
  "b",
  "d",
]
`;

exports[`with onlyKeys 2`] = `
[
  "c",
  "b",
  "d",
  "a",
]
`;

exports[`with onlyKeys 3`] = `
{
  "b": 1,
  "d": 1,
}
`;
